--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
-    "onnxruntime-node": "^1.21.1"
+    "onnxruntime-node": "^1.21.1",
+    "sharp": "^0.34.1"
   }
 }
