--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
     "onnxruntime-node": "^1.21.1",
+    "ora": "^8.2.0",
     "sharp": "^0.34.1"
   }
 }
