--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "vue": "^3.5.13",
     "vue-chart.js": "^0.2.0",
