--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.5.13",
     "vue-chart.js": "^0.2.0",
     "vue-chartjs": "^5.3.2",
+    "vue-router": "^4.5.1",
     "vuetify": "^3.8.0-beta.0"
   },
   "devDependencies": {
