--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "^7.4.47",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-chart.js": "^0.2.0",
     "vue-chartjs": "^5.3.2",
