--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
     "onnxruntime-node": "^1.21.1",
+    "openai": "^4.98.0",
     "ora": "^8.2.0",
     "sharp": "^0.34.1"
   }
